--- a/index.html
+++ b/index.html
@@ -93,464 +93,8 @@
 </head>
 <body>
 
- <h1>SECTION D</h1>
-
-  <h1>Graph Traversal: BFS and DFS</h1>
-
-  <div class="section">
-    <h2>(A) Definitions and Differences</h2>
-
-    <h3>Breadth-First Search (BFS)</h3>
-    <p>
-      BFS is a graph traversal algorithm that explores all neighbors of a node before going to the next level of neighbors.
-      It is commonly implemented using a <strong>queue</strong>.
-    </p>
-
-    <h3>Depth-First Search (DFS)</h3>
-    <p>
-      DFS is a traversal algorithm that explores as far along each branch as possible before backtracking.
-      It is commonly implemented using <strong>recursion</strong> or an explicit <strong>stack</strong>.
-    </p>
-
-    <h3>Key Differences</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Criteria</th>
-          <th>BFS</th>
-          <th>DFS</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>(i) Approach</td>
-          <td>Level-wise traversal</td>
-          <td>Depth-wise traversal</td>
-        </tr>
-        <tr>
-          <td>(ii) Data Structure Used</td>
-          <td>Queue</td>
-          <td>Stack / Recursion</td>
-        </tr>
-        <tr>
-          <td>(iii) Time Complexity</td>
-          <td>O(V + E)</td>
-          <td>O(V + E)</td>
-        </tr>
-        <tr>
-          <td>(iv) Applications</td>
-          <td>
-            - Finding shortest path in unweighted graphs<br>
-            - Level-order traversal in trees
-          </td>
-          <td>
-            - Topological sorting<br>
-            - Solving puzzles and mazes
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div class="section">
-    <h2>(B) Graph Traversal Example</h2>
-
-    <h3>(i) Graph Representation</h3>
-    <div class="graph">
-      <p><strong>Vertices:</strong> A, B, C, D, E, F</p>
-      <p><strong>Edges:</strong></p>
-      <ul>
-        <li>A - B</li>
-        <li>A - C</li>
-        <li>B - D</li>
-        <li>C - E</li>
-        <li>D - F</li>
-        <li>E - F</li>
-      </ul>
-    </div>
-
-    <p><strong>Graph Diagram (Text-based):</strong></p>
-    <pre>
-         A
-        / \
-       B   C
-       |    \
-       D     E
-        \   /
-          F
-    </pre>
-
-    <h3>(ii) BFS Traversal (Starting from A)</h3>
-    <pre>
-Step 1: Start at A → Enqueue A → Visited: [A] → Queue: [A]
-Step 2: Dequeue A → Visit B, C → Visited: [A, B, C] → Queue: [B, C]
-Step 3: Dequeue B → Visit D → Visited: [A, B, C, D] → Queue: [C, D]
-Step 4: Dequeue C → Visit E → Visited: [A, B, C, D, E] → Queue: [D, E]
-Step 5: Dequeue D → Visit F → Visited: [A, B, C, D, E, F] → Queue: [E, F]
-Step 6: Dequeue E → No unvisited neighbors → Queue: [F]
-Step 7: Dequeue F → Done
-
-<strong>BFS Order: A → B → C → D → E → F</strong>
-    </pre>
-
-    <h3>(iii) DFS Traversal (Starting from A)</h3>
-    <pre>
-Step 1: Start at A → Visit A
-Step 2: Go to B → Visit B
-Step 3: Go to D → Visit D
-Step 4: Go to F → Visit F
-Step 5: Backtrack → D → B → A
-Step 6: Go to C → Visit C
-Step 7: Go to E → Visit E → Done
-
-<strong>DFS Order: A → B → D → F → C → E</strong>
-    </pre>
-
-    <h3>(iv) Comparison of Traversal Orders</h3>
-    <p><strong>BFS:</strong> A → B → C → D → E → F</p>
-    <p><strong>DFS:</strong> A → B → D → F → C → E</p>
-
-    <h3>When to Prefer BFS or DFS?</h3>
-    <ul>
-      <li><strong>BFS:</strong> Preferred when shortest path or minimal number of steps is needed (e.g., pathfinding in unweighted graphs).</li>
-      <li><strong>DFS:</strong> Preferred in scenarios requiring complete exploration (e.g., solving puzzles, detecting cycles, topological sorting).</li>
-    </ul>
-  </div>
- <h1>SECTION C</h1>
-
-
-
-  <h1>Q1: Graph Representation and Traversal</h1>
-
-  <div class="section">
-    <h2>(a) Graph Representation</h2>
-    <p><strong>Vertices:</strong> A, B, C, D</p>
-    <p><strong>Edges:</strong> (A,B), (A,C), (B,D), (C,D)</p>
-
-    <h3>Adjacency Matrix:</h3>
-    <pre>
-    A B C D
-A [0 1 1 0]
-B [0 0 0 1]
-C [0 0 0 1]
-D [0 0 0 0]
-    </pre>
-
-    <h3>Adjacency List:</h3>
-    <pre>
-A → B → C  
-B → D  
-C → D  
-D → NULL  
-    </pre>
-  </div>
-
-  <div class="section">
-    <h2>(b) Traversals from Vertex A</h2>
-
-    <h3>BFS (Breadth-First Search):</h3>
-    <pre>
-Visited: A  
-Queue: [A]  
-→ Visit A → Enqueue B, C  
-→ Visit B → Enqueue D  
-→ Visit C → D already in queue  
-→ Visit D → Done  
-
-<strong>BFS Order:</strong> A → B → C → D
-    </pre>
-
-    <h3>DFS (Depth-First Search):</h3>
-    <pre>
-Start at A  
-→ Visit B  
-  → Visit D  
-Backtrack to A  
-→ Visit C → D already visited  
-
-<strong>DFS Order:</strong> A → B → D → C
-    </pre>
-  </div>
-
-  <div class="section">
-    <h2>(c) Suitable Traversal for Shortest Path</h2>
-    <p>
-      <strong>BFS</strong> is more suitable for shortest path discovery in unweighted graphs, because it explores all nodes at a given level before going deeper.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>(d) Real-World Applications of Graphs</h2>
-    <ul>
-      <li><strong>Social Networks:</strong> Users are nodes, relationships are edges. Graphs help find friend recommendations, groups, influencers, etc.</li>
-      <li><strong>Google Maps:</strong> Cities are nodes, roads are edges. Graph algorithms find shortest paths, traffic-aware routes, etc.</li>
-    </ul>
-  </div>
-
-  <h1>Q2: Student Records Using Array of Structures</h1>
-
-  <div class="section">
-    <h2>C Program with Sorting</h2>
-
-    <pre><code>#include &lt;stdio.h&gt;
-#include &lt;stdlib.h&gt;
-#include &lt;string.h&gt;
-
-typedef struct {
-    int roll;
-    char name[50];
-    float marks;
-} Student;
-
-void input(Student *s, int n) {
-    for (int i = 0; i &lt; n; i++) {
-        printf("Enter roll, name, marks for student %d:\n", i + 1);
-        scanf("%d", &amp;s[i].roll);
-        getchar(); // clear buffer
-        fgets(s[i].name, 50, stdin);
-        s[i].name[strcspn(s[i].name, "\n")] = 0; // remove newline
-        scanf("%f", &amp;s[i].marks);
-    }
-}
-
-void insertionSort(Student *s, int n) {
-    for (int i = 1; i &lt; n; i++) {
-        Student key = s[i];
-        int j = i - 1;
-        while (j &gt;= 0 &amp;&amp; s[j].marks &lt; key.marks) {
-            s[j + 1] = s[j];
-            j--;
-        }
-        s[j + 1] = key;
-    }
-}
-
-void display(Student *s, int n) {
-    printf("\nSorted Student List (Descending Marks):\n");
-    for (int i = 0; i &lt; n; i++) {
-        printf("Roll: %d | Name: %s | Marks: %.2f\n", s[i].roll, s[i].name, s[i].marks);
-    }
-}
-
-int main() {
-    int n;
-    printf("Enter number of students: ");
-    scanf("%d", &amp;n);
-
-    Student *students = (Student *)malloc(n * sizeof(Student));
-    if (!students) {
-        printf("Memory allocation failed!\n");
-        return 1;
-    }
-
-    input(students, n);
-    insertionSort(students, n);
-    display(students, n);
-
-    free(students);
-    return 0;
-}</code></pre>
-
-    <h2>Sample Output:</h2>
-    <pre>
-Enter number of students: 3  
-Enter roll, name, marks for student 1:  
-1  
-Alice  
-85  
-Enter roll, name, marks for student 2:  
-2  
-Bob  
-90  
-Enter roll, name, marks for student 3:  
-3  
-Charlie  
-75  
-
-Sorted Student List (Descending Marks):  
-Roll: 2 | Name: Bob | Marks: 90.00  
-Roll: 1 | Name: Alice | Marks: 85.00  
-Roll: 3 | Name: Charlie | Marks: 75.00
-    </pre>
-  </div>
-
-  <div class="section">
-    <h2>Explanation of Techniques Used</h2>
-
-    <ul>
-      <li><strong>Structures:</strong> Used to group student fields like roll, name, and marks.</li>
-      <li><strong>Dynamic Memory Allocation:</strong> <code>malloc()</code> allocates memory for <code>n</code> students at runtime.</li>
-      <li><strong>Pointers:</strong> Array of structures accessed using pointers to students.</li>
-      <li><strong>Structure Passing:</strong> Structures are passed to functions like <code>input()</code>, <code>display()</code>, and <code>insertionSort()</code> by reference (using pointers).</li>
-    </ul>
-  </div>
- <h1>SECTION B</h1>
- 
-  <h1>Q1: Stack Push and Pop Operations</h1>
-
-  <div class="section">
-    <h2>1. Using Array</h2>
-    <pre><code>Initialize top = -1
-Push(x):
-  if top == MAX-1:
-    print "Overflow"
-  else:
-    top = top + 1
-    stack[top] = x
-
-Pop():
-  if top == -1:
-    print "Underflow"
-  else:
-    value = stack[top]
-    top = top - 1
-    return value</code></pre>
-
-    <h2>2. Using Linked List</h2>
-    <pre><code>struct Node {
-  int data;
-  Node *next;
-}
-
-top = NULL;
-
-Push(x):
-  Create new node N
-  N→data = x
-  N→next = top
-  top = N
-
-Pop():
-  if top == NULL:
-    print "Underflow"
-  else:
-    temp = top
-    value = top→data
-    top = top→next
-    free(temp)
-    return value</code></pre>
-  </div>
-
-  <h1>Q2: Binary Search Tree (BST)</h1>
-
-  <div class="section">
-    <h2>a) Constructing BST from: 50, 30, 70, 20, 40, 60, 80</h2>
-    <p>Insert one by one maintaining BST rules: Left &lt; Root &lt; Right</p>
-    <pre>
-           50
-         /    \
-       30      70
-      /  \    /  \
-    20   40  60  80
-    </pre>
-
-    <h2>b) Traversals</h2>
-    <pre>
-Inorder (Left, Root, Right): 20 30 40 50 60 70 80  
-Preorder (Root, Left, Right): 50 30 20 40 70 60 80  
-Postorder (Left, Right, Root): 20 40 30 60 80 70 50
-    </pre>
-  </div>
-
-  <h1>Q3: Real-World Applications of Graphs</h1>
-
-  <div class="section">
-    <h2>a) Social Networks (Friend Suggestions)</h2>
-    <p>
-      Users are nodes, friendships are edges. Graph traversal helps find friends of friends (2nd-degree nodes) for suggestions.
-    </p>
-
-    <h2>b) Navigation Systems (Google Maps)</h2>
-    <p>
-      Locations are nodes, roads are edges with weights. Dijkstra's Algorithm finds shortest path from source to destination.
-    </p>
-
-    <h2>c) Web Page Ranking (PageRank)</h2>
-    <p>
-      Pages are nodes, hyperlinks are edges. PageRank uses graph traversal and weight assignment to rank importance of pages.
-    </p>
-  </div>
-
-  <h1>Q4: Why is Insertion Sort More Efficient than Bubble Sort on Small or Nearly Sorted Arrays?</h1>
-
-  <div class="section">
-    <ul>
-      <li><strong>Insertion Sort:</strong> Efficient for small/nearly sorted arrays because it shifts elements only when needed.</li>
-      <li><strong>Bubble Sort:</strong> Repeatedly swaps adjacent elements regardless of overall sortedness, leading to more operations.</li>
-      <li><strong>Time Complexity:</strong> Best-case for insertion sort is O(n), while bubble sort is always O(n²).</li>
-    </ul>
-  </div>
-
-  <h1>Q5: Binary Tree Traversals</h1>
-
-  <div class="section">
-    <h2>Given Binary Tree:</h2>
-    <pre>
-         10
-        /  \
-       5    15
-      / \     \
-     3   7     20
-    </pre>
-
-    <h2>a) Recursive Traversals</h2>
-    <pre>
-Inorder (Left, Root, Right): 3 5 7 10 15 20  
-Preorder (Root, Left, Right): 10 5 3 7 15 20  
-Postorder (Left, Right, Root): 3 7 5 20 15 10
-    </pre>
-
-    <h2>b) Iterative Inorder Traversal using Stack</h2>
-    <pre><code>struct Node {
-    int data;
-    Node *left, *right;
-};
-
-void inorderIterative(Node* root) {
-    Stack s;
-    Node* current = root;
-
-    while (current != NULL || !s.isEmpty()) {
-        while (current != NULL) {
-            s.push(current);
-            current = current->left;
-        }
-
-        current = s.pop();
-        printf("%d ", current->data);
-        current = current->right;
-    }
-}</code></pre>
-    <p><strong>Output:</strong> 3 5 7 10 15 20</p>
-  </div>
-<h1>BEER PILANA</h1>
-  <h1>SECTION A</h1>
-
-
-  <div class="question">
-    <strong>Q1:</strong> A graph in which each pair of vertices is connected to a unique edge is called a:
-    <div class="answer">➡ <strong>Complete Graph</strong></div>
-  </div>
-
-  <div class="question">
-    <strong>Q2:</strong> Which function is used to dynamically allocate memory for an array in C?
-    <div class="answer">➡ <strong>calloc()</strong></div>
-  </div>
-
-  <div class="question">
-    <strong>Q3:</strong> In a stack implemented using linked list, which operation is used to add an element?
-    <div class="answer">➡ <strong>Push</strong></div>
-  </div>
-
-  <div class="question">
-    <strong>Q4:</strong> The degree of a node in a tree is the number of:
-    <div class="answer">➡ <strong>Children it has</strong></div>
-  </div>
-
-  <div class="question">
-    <strong>Q5:</strong> Which sorting algorithm is most efficient for a nearly sorted array?
-    <div class="answer">➡ <strong>Insertion Sort</strong></div>
-  </div>
+guyguyguygyuyu
+  
 
 </body>
 </html>
